<resources>
    <!--Application Name-->
    <string name="app_name">Waymate_Mobile</string>

    <!--Sign In Page-->
    <string name="signInPassword">Password</string>
    <string name="signInEmail">Email</string>
    <string name="btnSignIn">Sign In</string>

    <!--Top Menu Bar-->
    <string name="back">Back</string>

    <!--Menu Passenger-->
    <string name="menuPassengerBtnShowTravel">See Travel</string>

    <!--Menu Global-->
    <string name="menuBtnShowProfile">View Profile</string>
    <string name="menuBtnLogOut">Disconnection</string>

    <!--Menu Driver-->
    <string name="menuDriverBtnShowMyTravel">Show My Travel</string>
    <string name="menuDriverBtnAddNewTravel">Add New Travel</string>

    <!--Title-->
    <string name="ttlDepart">Depart</string>
    <string name="ttlDestination">Destination</string>
    <string name="ttlDate">Date</string>

    <!--List Item-->
    <string name="date_item">21–04–2000</string>
    <string name="departure_item">Brussels</string>
    <string name="destination_item">Mons</string>

    <!--Load More-->
    <string name="btnMoreTrips">More trips</string>
    <string name="btnMoreBooking">More Booking</string>

    <!--Hint-->
    <string name="htPlate">Plate Number</string>
    <string name="htPrice">Price</string>
    <string name="htBrand">Brand</string>
    <string name="htModel">Model</string>
    <string name="htMessage">Message</string>

    <!--TextView-->
    <string name="tvAirConditioning">Air Conditioning</string>
    <string name="tvPetFriendly">Pet Friendly</string>
    <string name="tvLuggage">Allowed Luggage</string>
    <string name="tvSmoke">Allowed Smoke</string>
    <string name="tvQRCodeScan">No QR Code has been scanned</string>
    <string name="tvToday">08/07/2024 – 16h00</string>

    <!--Btn Text-->
    <string name="btnCreateTrip">Create Trip</string>
    <string name="btnModify">Modify</string>
    <string name="btnModifyTrip">Modify Trip</string>
    <string name="btnMenu">Return to the menu</string>
    <string name="btnScan">Scan QR Code</string>

    <!--List Details-->
    <string name="detailsDateTrip">10–08–2024</string>
    <string name="detailsCityTrip"><![CDATA[Namur —> Liège]]></string>
    <string name="detailsTripPrice">25.50 €</string>

    <!--Generic Data-->
    <string name="data">Data</string>

    <!--More Details-->
    <string name="departure_city">Departure city</string>
    <string name="destination_city">Destination city</string>
    <string name="travel_date">Travel date</string>
    <string name="price_of_the_trip">Price of the trip</string>
    <string name="plate_number">Plate number</string>
    <string name="car_brand">Car brand</string>
    <string name="car_model">Car model</string>
    <string name="can_you_smoke">Can you smoke</string>
    <string name="pets_accepted">Pets accepted</string>
    <string name="can_you_take_luggage">Can you take luggage ?</string>
    <string name="ttlHour">Hour</string>
</resources>