<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/basicDetailsLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/item_day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="8dp"
        android:text="@string/date_item"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/item_Departure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="8dp"
        android:text="@string/departure_item"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/item_Destination"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="8dp"
        android:text="@string/destination_item"
        android:textAppearance="?attr/textAppearanceListItem" />

    <ImageButton
        android:id="@+id/btnQRcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="0dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_qr_code_24"
        android:contentDescription="@string/qrcode_button_description"/>
</LinearLayout>