<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.QRScanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <ImageView
            android:id="@+id/view2"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_qr_code_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:text="@string/tvQRCodeScan" />
        <TextView
        android:id="@+id/tv_Code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"/>


        <Button
            android:id="@+id/btn_Scan"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="70dp"
            android:backgroundTint="@color/blueWaymate"
            android:background="@drawable/rounded_corner"
            android:text="@string/btnScan"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            app:strokeWidth="3dp"/>

        <Button
            android:id="@+id/btn_MainMenu"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="70dp"
            android:backgroundTint="@color/blueWaymate"
            android:background="@drawable/rounded_corner"
            android:text="@string/btnMenu"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            app:strokeWidth="3dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

