<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.trip.modifyTrip.ModifyTripFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="50dp"
            android:text="Basic information"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_startingPointLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/text_input_layout_background"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_city_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_startingPoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ttlDepart"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_DestinationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/text_input_layout_background"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_city_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_Destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ttlDestination"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_DatePickerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/text_input_layout_background"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_date_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_DatePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ttlDate"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_TimePickerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/text_input_layout_background"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_date_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_TimePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ttlDate"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_PriceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/text_input_layout_background"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_euro_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_Price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/htPrice"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/listDivider"
            android:layout_marginStart="50dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="50dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="50dp"
            android:text="Car information"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_PlateNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/text_input_layout_background"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_plate_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_PlateNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/htPlate"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_BrandLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/text_input_layout_background"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_car_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_Brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/htBrand"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_ModelLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/text_input_layout_background"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_car_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_Model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/htModel"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/listDivider"
            android:layout_marginStart="50dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="50dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="50dp"
            android:text="More information"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="50dp"
                android:text="@string/tvAirConditioning"
                android:textSize="16sp"
                android:gravity="start"
                android:drawableStart="@drawable/ic_air_conditioning_24"
                android:drawablePadding="8dp"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/swtAir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="50dp"
                android:text="@string/tvSmoke"
                android:textSize="16sp"
                android:gravity="start"
                android:drawableStart="@drawable/ic_smoke_24"
                android:drawablePadding="8dp"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/swtSmoke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="50dp"
                android:text="@string/tvPetFriendly"
                android:textSize="16sp"
                android:gravity="start"
                android:drawableStart="@drawable/ic_pet_24"
                android:drawablePadding="8dp"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/swtPet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="50dp"
                android:text="@string/tvLuggage"
                android:textSize="16sp"
                android:gravity="start"
                android:drawableStart="@drawable/ic_luggage_24"
                android:drawablePadding="8dp"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/swtLuggage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/listDivider"
            android:layout_marginStart="50dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="50dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_MessageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/text_input_layout_background"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_message_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_Message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/htMessage"
                android:minLines="4"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:maxLines="6"
                android:overScrollMode="ifContentScrolls"
                android:maxLength="200"/>
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/listDivider"
            android:layout_marginStart="50dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="50dp" />

        <Button
            android:id="@+id/btn_modifyTrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="100dp"
            android:backgroundTint="@color/blueWaymate"
            android:background="@drawable/rounded_corner"
            android:text="@string/btnModifyTrip"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            app:strokeWidth="3dp" />
    </LinearLayout>

</ScrollView>